objects/Credit_Memo_to_Forms_Copy__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen_Section_Name__c</fullName>
        <label>Screen Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Memo to Forms Copy</label>
    <pluralLabel>Credit Memo to Forms Copies</pluralLabel>
</CustomObject>